--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Sample Node.js (Express) app for AWS Elastic Beanstalk",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "sass": "sass public/styles.css dist/styles.css"
   },
   "repository": {
     "type": "git",
@@ -12,6 +13,10 @@
   },
   "license": "MIT-0",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "jquery": "^3.7.1"
+  },
+  "devDependencies": {
+    "sass": "^1.77.2"
   }
 }
